 10/14/2002 Malcolm Walker <malcolm@worldforge.org>
    - Added call to Sleep(0) in win32 nonblocking connect
 07/22/2002 Ron Steinke <rsteinke@w-link.net>,
    - changed sizeof(sockaddr) to sizeof(sockaddr_in) in
      several locations, so that we pass the correct size
      of in_peer and out_peer in socketbuf
    - reordered initializers in socketbuf constructors
      to match their declaration order in the class
 07/21/2002 Al Riddoch <alriddoch@zepler.org>,
    - configure.in: Added --enable-debug option for debug build,
      increment version and interface version due to changes, add
      news item, and release.
 07/16/2002 Dan Tomalesky <grim@xynesis.com>
    - skstream.cpp: added a small fix to a bug with is_ready.  wasn't
      compiling on linux and seems code was wrong in the select because it was
      doing |= to the select() instead of != (i.e., if it doesn't return 1,
      there is no ready socket or an error)
 07/15/2002 Al Riddoch <alriddoch@zepler.org>,
            Malcolm Walker <malcolm@worldforge.org>
    - skstream.cpp: Handle nonblocking connect in win32
		- fix call in is_ready() for TCP nonblocking connect
    - skstream.h: Include correct streambuf header on Linux.
 07/03/2002 James Turner <james@worldforge.org>
	-Added configuration case for Darwin / OS-X
	-Fixed Rsteinke's changes to use typedefs for socklen / errnum
 06/26/2002 Michael Koch <konqueror@gmx.de>
    -Install headers into $(includedir)/skstream
    -Simplified installation of doc files
 06/22/2002 Al Riddoch <alriddoch@zepler.org>,
    -Removed "using namespace std" from header.
 06/11/2002 Ron Steinke <rsteinke@w-link.net>,
    -Added a timeout version of the tcp_socket_stream
     constructor, which wraps the timeout version
     of open()
 06/11/2002 Ron Steinke <rsteinke@w-link.net>,
    -Added an optional "milliseconds" argument to
     tcp_socket_stream::is_ready(), to take advantage
     of the timeout in select()
 06/11/2002 Ron Steinke <rsteinke@w-link.net>,